vendor/zerocopy/tests/ui-stable/diagnostic-not-implemented-known-layout.stderr
error[E0277]: the trait bound `NotZerocopy: KnownLayout` is not satisfied
  --> tests/ui-stable/diagnostic-not-implemented-known-layout.rs:16:26
   |
16 |     takes_known_layout::<NotZerocopy>();
   |                          ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `KnownLayout` is not implemented for `NotZerocopy`
  --> tests/ui-stable/../include.rs
   |
   |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(KnownLayout)]` to `NotZerocopy`
   = help: the following other types implement trait `KnownLayout`:
             &T
             &mut T
             ()
             *const T
             *mut T
             AU16
             AtomicBool
             AtomicI16
           and $N others
note: required by a bound in `takes_known_layout`
  --> tests/ui-stable/diagnostic-not-implemented-known-layout.rs:19:26
   |
19 | fn takes_known_layout<T: KnownLayout>() {}
   |                          ^^^^^^^^^^^ required by this bound in `takes_known_layout`
